--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ base/video/*
 /code/tools/owmap/*.vcxproj
 /code/tools/owmap/*.filters
 /code/tools/owmap/*.user
+/ipch
+/*.opensdf
+/*.sdf
+/*.sln
+/*.suo
